// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ISIS Instruments table component renders correctly 1`] = `
Object {
  "columns": Array [
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "fullName",
      "defaultSort": "asc",
      "filterComponent": [Function],
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "label": "instruments.name",
    },
    Object {
      "dataKey": "type",
      "filterComponent": [Function],
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "label": "instruments.type",
    },
  ],
  "data": Array [
    Object {
      "description": "foo bar",
      "fullName": "Test instrument 1",
      "id": 1,
      "name": "Test 1",
      "url": "test url",
    },
    Object {
      "description": "foo bar",
      "id": 2,
      "name": "Test 2",
      "url": "test url",
    },
  ],
  "detailsPanel": [Function],
  "loadMoreRows": [Function],
  "onSort": [Function],
  "sort": Object {
    "fullName": "asc",
  },
  "totalRowCount": 1,
}
`;

exports[`ISIS Instruments table component renders names as links in StudyHierarchy 1`] = `
Array [
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
    data-testid="isis-instrument-table-name"
    href="/browseStudyHierarchy/instrument/1/study"
  >
    Test instrument 1
  </a>,
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
    data-testid="isis-instrument-table-name"
    href="/browseStudyHierarchy/instrument/2/study"
  >
    Test 2
  </a>,
]
`;

exports[`ISIS Instruments table component renders names as links when NOT in studyHierarchy 1`] = `
Array [
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
    data-testid="isis-instrument-table-name"
    href="/browse/instrument/1/facilityCycle"
  >
    Test instrument 1
  </a>,
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
    data-testid="isis-instrument-table-name"
    href="/browse/instrument/2/facilityCycle"
  >
    Test 2
  </a>,
]
`;
